[package]
name = "cliux"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Pjdur"]
repository = "https://github.com/Pjdur/cliux"
description = "Styled terminal output made simple — boxes, sections, dividers, and emoji-aware padding for CLI tools."
keywords = ["cli", "terminal", "output"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
ansi_term = "0.12.1"
unicode-segmentation = "1.10"
unicode-width = "0.1"
