[package]
name = "cliux"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Pjdur"]
repository = "https://github.com/Pjdur/cliux"
description = "Styled terminal output made simple — boxes, sections, dividers, and emoji-aware padding for CLI tools."
keywords = ["cli", "terminal", "output"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
ansi_term = "0.12.1"
rpassword = "7.4.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
